--- a/templates/juradoA.html
+++ b/templates/juradoA.html
@@ -153,7 +153,7 @@
           }
         }
       }
-    }, //{ onlyOnce: true });
+    }); //{ onlyOnce: true });
   }
 
   // Função para carregar a fase do atleta selecionado
