--- a/templates/juradoC.html
+++ b/templates/juradoC.html
@@ -145,7 +145,7 @@
           }
         }
       }
-    }, //{ onlyOnce: true });
+    }); //{ onlyOnce: true });
   }
 
   // Função para carregar a fase do atleta selecionado
